@@ -162,7 +162,8 @@ simpleMutex _PL_mutexes[] =
   PTHREAD_MUTEX_INITIALIZER,		/* L_FEATURE */
   PTHREAD_MUTEX_INITIALIZER,		/* L_OP */
   PTHREAD_MUTEX_INITIALIZER,		/* L_INIT */
-  PTHREAD_MUTEX_INITIALIZER		/* L_TERM */
+  PTHREAD_MUTEX_INITIALIZER,		/* L_TERM */
+  PTHREAD_MUTEX_INITIALIZER		/* L_GC */
 };
 
 #ifdef USE_CRITICAL_SECTIONS
